[package]
name = "nitd_result"
version = "0.1.0"
edition = "2021"

[dependencies]
convert_case = "0.6.0"
indexmap = "2.0.2"
polars-core = "0.35.3"
polars-io = { version = "0.35.3", features = ["csv"] }
reqwest = {version = "0.11.22", features = ["json"]}
serde = {version = "1.0.190", features = ["derive"]}
serde_json = "1.0.107"
tokio = {version = "1.33.0", features = ["rt-multi-thread", "macros"]}
